# libmodbus

./: .appveyor.yml  .dir-locals.el  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MIGRATION  Makefile.am  NEWS  acinclude.m4  autogen.sh  configure.ac  libmodbus.pc.in
doc/: Makefile.am  asciidoc.conf  libmodbus.txt  modbus_close.txt  modbus_connect.txt  modbus_flush.txt  modbus_free.txt  modbus_get_byte_from_bits.txt  modbus_get_byte_timeout.txt  modbus_get_float.txt  modbus_get_float_abcd.txt  modbus_get_float_badc.txt  modbus_get_float_cdab.txt  modbus_get_float_dcba.txt  modbus_get_header_length.txt  modbus_get_indication_timeout.txt  modbus_get_response_timeout.txt  modbus_get_slave.txt  modbus_get_socket.txt  modbus_mapping_free.txt  modbus_mapping_new.txt  modbus_mapping_new_start_address.txt  modbus_mask_write_register.txt  modbus_new_rtu.txt  modbus_new_tcp.txt  modbus_new_tcp_pi.txt  modbus_read_bits.txt  modbus_read_input_bits.txt  modbus_read_input_registers.txt  modbus_read_registers.txt  modbus_receive.txt  modbus_receive_confirmation.txt  modbus_reply.txt  modbus_reply_exception.txt  modbus_report_slave_id.txt  modbus_rtu_get_rts.txt  modbus_rtu_get_rts_delay.txt  modbus_rtu_get_serial_mode.txt  modbus_rtu_set_custom_rts.txt  modbus_rtu_set_rts.txt  (+27 more)
src/: Makefile.am  modbus-data.c  modbus-private.h  modbus-rtu-private.h  modbus-rtu.c  modbus-rtu.cpp  modbus-rtu.h  modbus-rtu.hpp  modbus-tcp-private.h  modbus-tcp.c  modbus-tcp.h  modbus-version.h.in  modbus.c  modbus.cpp  modbus.h  modbus.hpp  (+2 more)
(+21 files in other folders)
